--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root">
-      <h1 class="title">網上連儂牆</h1>
+      <h1 class="title">網上連儂牆1234</h1>
       <main>
         <div id="formList">
           <form
@@ -99,14 +99,14 @@
     </div>
     <script>
       function showImage(img) {
-        let card = img.closest('.card')
-        let dialog = card.querySelector('dialog')
-        dialog.open = true
-        dialog.querySelector('img').src = img.src
+        let card = img.closest(".card");
+        let dialog = card.querySelector("dialog");
+        dialog.open = true;
+        dialog.querySelector("img").src = img.src;
       }
       function hideDialog(button) {
-        let dialog = button.closest('dialog')
-        dialog.open = false
+        let dialog = button.closest("dialog");
+        dialog.open = false;
       }
     </script>
     <script src="/memos.js"></script>
